# load-forecasting-ml-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
airflow/dags/: energy_batch_prediction_dag.py  energy_training_dag.py
config/: config.yaml
energy_forecasting/components/: batch_prediction.py  data_ingestion.py  model_evaluation.py
energy_forecasting/configuration/: configuration.py
energy_forecasting/data_access/: postgres_loader.py
notebooks/: EDA_and_modeling_MLforecast.ipynb  batch_prediction.ipynb
scripts/: init-db.sh  kaggle_to_db_df_mlf.py  setup_fresh.sh
tests/: test_batch_prediction_pipeline_full.py  test_data_ingestion_validation.py  test_model_evaluation_logic.py  test_reliability_idempotency.py  test_security_sql_injection.py  test_train_pipeline_full.py  test_training_pipeline_smoke.py
