[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-mlops"
version = "0.1.0"
description = "Energy forecasting MLOps project"
authors = [{ name = "Ramin" }]
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]

# ============================================================================
# Tool Configurations for CI
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
filterwarnings = [
    "ignore::FutureWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["energy_forecasting"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
